[package]
name = "au"
description = "audio unit"
authors = ["Jamie Brough <jamie@wavey.ai>"]
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
h264 = { git = "https://github.com/wavey-ai/av-rs.git" }
chrono = "0.4.33"
bytes = "1.5.0"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
